# packelf

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
packelf/: __init__.py  cli.py
